# wundergraph

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  rust-toolchain
.github/workflows/: ci.yml  quickstart.yml
wundergraph/: Cargo.toml
wundergraph/bench/: queries.rs
wundergraph/src/: context.rs  diesel_ext.rs  error.rs  graphql_type.rs  juniper_helper.rs  lib.rs  order.rs  query_modifier.rs  scalar.rs
wundergraph/src/filter/: build_filter.rs  filter_helper.rs  filter_value.rs  inner_filter.rs  mod.rs  not.rs  reference_filter.rs
wundergraph/src/filter/collector/: and.rs  mod.rs  or.rs
wundergraph/src/filter/common_filter/: eq.rs  eq_any.rs  mod.rs  not_eq.rs
wundergraph/src/filter/nullable_filter/: filter_option.rs  is_null.rs  mod.rs  reference_filter.rs  reverse_reference_filter.rs
wundergraph/src/filter/string_filter/: like.rs  mod.rs
wundergraph/src/filter/transformator/: default.rs  exclusive.rs  mod.rs  selective.rs
wundergraph/src/helper/: from_lookahead.rs  mod.rs  nameable.rs  primary_keys.rs  tuple.rs
wundergraph/src/juniper_ext/: from_lookahead.rs  mod.rs  mod.rs~  nameable.rs
wundergraph/src/macros/: mod.rs  mutation.rs  query.rs
wundergraph/src/mutations/: delete.rs  insert.rs  mod.rs  update.rs
wundergraph/src/query_builder/: mod.rs  mod.rs~
wundergraph/src/query_builder/mutations/: delete.rs  delete.rs~  mod.rs  mod.rs~  update.rs  update.rs~
wundergraph/src/query_builder/mutations/insert/: mod.rs  mod.rs~  mysql.rs  pg.rs  pg.rs~  sqlite.rs  sqlite.rs~
wundergraph/src/query_builder/selection/: mod.rs  mod.rs~  offset.rs  offset.rs~  order.rs  order.rs~  query_modifier.rs  query_modifier.rs~  query_resolver.rs  select.rs
wundergraph/src/query_builder/selection/fields/: associations.rs  associations.rs~  field_list.rs  field_list.rs~  helper.rs  helper.rs~  mod.rs  mod.rs~
wundergraph/src/query_builder/selection/filter/: build_filter.rs  filter_helper.rs  filter_helper.rs~  filter_value.rs  filter_value.rs~  inner_filter.rs  mod.rs  not.rs  not.rs~  reference_filter.rs  reference_filter.rs~
wundergraph/src/query_builder/selection/filter/collector/: and.rs  and.rs~  mod.rs  or.rs  or.rs~
wundergraph/src/query_builder/selection/filter/common_filter/: eq.rs  eq.rs~  eq_any.rs  mod.rs  mod.rs~  not_eq.rs  not_eq.rs~
wundergraph/src/query_builder/selection/filter/nullable_filter/: filter_option.rs  filter_option.rs~  is_null.rs  is_null.rs~
wundergraph/src/query_builder/selection/filter/string_filter/: like.rs  like.rs~  mod.rs  mod.rs~
wundergraph/src/query_builder/selection/filter/transformator/: default.rs  selective.rs
wundergraph/src/query_builder/types/: as_input_type.rs  has_many.rs  has_one.rs  mod.rs  mod.rs~  placeholder.rs  placeholder.rs~  wundergraph_value.rs  wundergraph_value.rs~
wundergraph/src/query_builder/types/field_value_resolver/: direct_resolver.rs  direct_resolver.rs~  has_one_resolver.rs  has_one_resolver.rs~  mod.rs  mod.rs~
wundergraph/src/query_helper/: has_many.rs  has_one.rs  lazy_load.rs  maybe_null.rs  mod.rs  null.rs  order.rs  placeholder.rs  select.rs  tuple.rs
wundergraph/src/third_party_integrations/: chrono.rs  chrono.rs~  mod.rs  mod.rs~  uuid.rs  uuid.rs~
wundergraph/tests/: alias.rs  helper.rs  lib.rs  limit_offset.rs  order.rs  query.rs  query_nested.rs  simple.rs  type_checking.rs
wundergraph/tests/mutations/: create.rs  delete.rs  mod.rs  update.rs
wundergraph_bench/: Cargo.toml
wundergraph_bench/migrations/pg/2018-09-28-104319_setup/: down.sql  up.sql
wundergraph_bench/migrations/sqlite/2018-09-28-104542_setup/: up.sql
wundergraph_bench/src/: api.rs  lib.rs  main.rs
wundergraph_cli/: Cargo.toml
wundergraph_cli/src/: database.rs  main.rs
wundergraph_cli/src/infer_schema_internals/: data_structures.rs  foreign_keys.rs  inference.rs  information_schema.rs  mod.rs  sqlite.rs  table_data.rs
wundergraph_cli/src/print_schema/: mod.rs  print_helper.rs  template_main.rs
wundergraph_cli/src/print_schema/snapshots/: tests__infer_schema.snap  tests__main-2.snap  tests__main-3.snap  tests__main.snap  tests__round_trip-2.snap  tests__round_trip-3.snap  wundergraph_cli__print_schema__tests__infer_schema@mysql.snap  wundergraph_cli__print_schema__tests__infer_schema@postgres.snap  wundergraph_cli__print_schema__tests__round_trip_test__mutation.snap  wundergraph_cli__print_schema__tests__round_trip_test__query_1.snap  wundergraph_cli__print_schema__tests__round_trip_test__query_2.snap
wundergraph_derive/: Cargo.toml
wundergraph_derive/src/: belonging_to.rs  build_filter.rs  build_filter_helper.rs  diagnostic_shim.rs  field.rs  filter.rs  filter_value.rs  from_lookahead.rs  inner_filter.rs  lib.rs  meta.rs  model.rs  nameable.rs  utils.rs  wundergraph_entity.rs  wundergraph_filter.rs  wundergraph_value.rs
wundergraph_example/: Cargo.toml
wundergraph_example/migrations/mysql/2018-01-24-131925_setup/: down.sql  up.sql
wundergraph_example/migrations/pg/2018-01-24-131925_setup/: up.sql
wundergraph_example/migrations/sqlite/2018-01-24-131925_setup/: up.sql
wundergraph_example/src/: lib.rs  main.rs  mutations.rs
wundergraph_example/src/mutations/: mysql.rs
