[workspace]
members = [
    "wundergraph",
    "wundergraph_derive",
    "wundergraph_example",
    "wundergraph_cli",
    "wundergraph_bench",
]

[replace]
"diesel:1.3.2" = { git = "https://github.com/weiznich/diesel", rev = "d4184dbb85ee" }
"diesel_migrations:1.3.0" = { git = "https://github.com/weiznich/diesel", rev = "d4184dbb85ee" }
"migrations_internals:1.3.0" = { git = "https://github.com/weiznich/diesel", rev = "d4184dbb85ee" }
"migrations_macros:1.3.0" = { git = "https://github.com/weiznich/diesel", rev = "d4184dbb85ee" }
"diesel_derives:1.3.0" = { git = "https://github.com/weiznich/diesel", rev = "d4184dbb85ee" }
"juniper:0.9.2" = { git = "https://github.com/weiznich/juniper", rev = "15cfff0a78" }
"juniper_codegen:0.9.2" = { git = "https://github.com/weiznich/juniper/", rev = "15cfff0a78" }
