[workspace]
members = [
    "wundergraph",
    "wundergraph_derive",
    "wundergraph_example",
    "wundergraph_cli",
    "wundergraph_bench",
]

[replace]
"diesel:1.3.3" = { git = "https://github.com/diesel-rs/diesel", rev = "db66040" }
"diesel_migrations:1.3.0" = { git = "https://github.com/diesel-rs/diesel", rev = "db66040" }
"migrations_internals:1.3.0" = { git = "https://github.com/diesel-rs/diesel", rev = "db66040" }
"migrations_macros:1.3.0" = { git = "https://github.com/diesel-rs/diesel", rev = "db66040"}
"diesel_derives:1.3.0" = { git = "https://github.com/diesel-rs/diesel", rev = "db66040" }
"juniper:0.9.2" = { git = "https://github.com/weiznich/juniper", rev = "15cfff0a78" }
"juniper_codegen:0.9.2" = { git = "https://github.com/weiznich/juniper/", rev = "15cfff0a78" }
