[workspace]
members = [
    "wundergraph",
    "wundergraph_derive",
    "wundergraph_example",
    "wundergraph_cli",
    "wundergraph_bench",
]

[replace]
"diesel:1.3.3" = { git = "https://github.com/diesel-rs/diesel", rev = "0040e93" }
"diesel_migrations:1.3.0" = { git = "https://github.com/diesel-rs/diesel", rev = "0040e93" }
"migrations_internals:1.3.0" = { git = "https://github.com/diesel-rs/diesel", rev = "0040e93" }
"migrations_macros:1.3.0" = { git = "https://github.com/diesel-rs/diesel", rev = "0040e93"}
"diesel_derives:1.3.0" = { git = "https://github.com/diesel-rs/diesel", rev = "0040e93" }
"juniper:0.10.0" = { git = "https://github.com/graphql-rust/juniper", rev = "733125c" }
"juniper_codegen:0.10.0" = { git = "https://github.com/graphql-rust/juniper/", rev = "733125c" }
