[package]
name = "wundergraph"
version = "0.1.0"
authors = ["Georg Semmler <georg_semmler_05@web.de>"]
license = "MIT OR Apache-2.0"
autotests = false

[dependencies]
serde = "1"
diesel = { version = "1.4", features = ["r2d2"]}
juniper = "0.11"
indexmap = "1"
wundergraph_derive = { path = "../wundergraph_derive" }
uuid = { version = "0.7", optional = true }
chrono = { version = "0.4", optional = true }
failure = "0.1"
log = "0.4"

[dev-dependencies]
wundergraph_example = { path = "../wundergraph_example", default-features = false, features = ["postgres"] }
wundergraph_bench = { path = "../wundergraph_bench" }
diesel_migrations = "1.3.0"
serde_json = "1"
criterion = "0.2"
lazy_static = "1"

[features]
#default = []
default = ["postgres", "sqlite", "extras"]
debug = ["wundergraph_derive/debug"]
sqlite = ["diesel/sqlite", "wundergraph_derive/sqlite"]
postgres = ["diesel/postgres", "wundergraph_derive/postgres"]
extras = ["chrono", "uuid"]



[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true

[[bench]]
name = "queries"
path = "bench/queries.rs"
harness = false
