[package]
name = "wundergraph_bench"
version = "0.1.0"
authors = ["Georg Semmler <georg_semmler_05@web.de>"]

[dependencies]
wundergraph = {path = "../wundergraph", default-features = false, features = ["postgres", "chrono"]}
diesel = {version = "=1.3.2", features = ["r2d2", "sqlite", "chrono", "postgres"]}
juniper = "=0.9.2"
actix = "0.7"
actix-web = "0.7"
failure = "0.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
futures = "0.1"
env_logger = "0.5"
chrono = "0.4"
num_cpus = "1.8"
clippy = { version = "0.0.207", optional = true }

[features]
default = []
lint = ["clippy"]
