[package]
name = "wundergraph_bench"
version = "0.1.0"
authors = ["Georg Semmler <georg_semmler_05@web.de>"]
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/weiznich/wundergraph"
readme = "../README.md"
keywords = ["GraphQL", "ORM", "PostgreSQL", "SQLite"]
categories = ["database", "web-programming"]
description = "A GraphQL ORM build on top of diesel"
edition = "2018"

[dependencies]
wundergraph = {path = "../wundergraph", default-features = false, features = ["chrono"]}
diesel = {version = "1.4", features = ["r2d2", "chrono"]}
juniper = "0.12.0"
actix-web = "1.0.0-rc"
failure = "0.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
env_logger = "0.6"
chrono = "0.4"
num_cpus = "1.8"
structopt = "0.2"

[features]
default = ["postgres"]
postgres = ["wundergraph/postgres", "diesel/postgres"]
sqlite = ["wundergraph/sqlite", "diesel/sqlite"]
