[package]
authors = ["Georg Semmler <georg_semmler_05@web.de>"]
name = "wundergraph_cli"
version = "0.1.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/weiznich/wundergraph"
readme = "../README.md"
keywords = ["GraphQL", "ORM", "PostgreSQL", "SQLite"]
categories = ["database", "web-programming"]
description = "A helper tool to generate some code for using wundergraph with existing databases"
edition = "2018"

[dependencies]
structopt = "0.3"
clap = "2.27"
diesel = "1.4"

[dev-dependencies]
dotenv = "0.15"
insta = { version = "0.16", features = ["backtrace"] }
tempdir = "0.3"
reqwest = "0.9"
serde_json = "1"

[features]
default = ["postgres", "sqlite"]
sqlite = ["diesel/sqlite"]
postgres = ["diesel/postgres"]
