[package]
name = "wundergraph_derive"
version = "0.1.0"
authors = ["Georg Semmler <georg_semmler_05@web.de>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/weiznich/wundergraph"
readme = "../README.md"
keywords = ["GraphQL", "ORM", "PostgreSQL", "SQLite"]
categories = ["database", "web-programming"]
description = "Internal proc macro implementation for wundergraph"
edition = "2018"

[dependencies]
syn = { version = "1", features = ["full", "fold", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[lib]
proc-macro = true

[features]
default = []
nightly = ["proc-macro2/nightly"]
postgres = []
sqlite = []
debug = []
