[package]
authors = ["Georg Semmler <georg_semmler_05@web.de>"]
name = "wundergraph_example"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
diesel = { version = "=1.3.2", features = ["r2d2", "sqlite", "chrono", "postgres"]}
diesel_migrations = "=1.3.0"
juniper = "=0.9.2"
actix = "0.7"
actix-web = "0.7"
indexmap = "1"
clippy = { version = "0.0.207", optional = true }
failure = "0.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
futures = "0.1"
env_logger = "0.5"

[dependencies.wundergraph]
path = "../wundergraph"
default-features = false

[features]
default = ["sqlite", "wundergraph/debug"]
#default = ["postgres"]
lint = ["clippy"]
sqlite = ["wundergraph/sqlite"]
postgres = ["wundergraph/postgres"]
