[package]
authors = ["Georg Semmler <georg_semmler_05@web.de>"]
name = "wundergraph_example"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/weiznich/wundergraph"
readme = "../README.md"
keywords = ["GraphQL", "ORM", "PostgreSQL", "SQLite", "Mysql"]
categories = ["database", "web-programming"]
description = "A GraphQL ORM build on top of diesel"
edition = "2018"

[dependencies]
diesel = { version = "1.4.0", features = ["r2d2", "chrono"]}
diesel_migrations = "1.4.0"
juniper = "0.14"
actix-web = "1.0.0"
indexmap = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
env_logger = "0.7"
structopt = "0.3"
failure = "0.1"

[dependencies.wundergraph]
path = "../wundergraph"
default-features = false

[features]
default = ["postgres", "wundergraph/debug"]
mysql = ["wundergraph/mysql", "diesel/mysql"]
postgres = ["wundergraph/postgres", "diesel/postgres"]
sqlite = ["wundergraph/sqlite", "diesel/sqlite"]
